# test_krasdivan

./: .gitignore  pyproject.toml
tests/: conftest.py  test_add_product_to_shopping_card.py  test_catalog_sections.py  test_login.py  test_product_filter.py  test_product_search.py  test_shopping_cart.py  utils.py
