[tool.poetry]
name = "test3"
version = "0.1.0"
description = ""
authors = ["Sergey Rubnikovich <sergeyrubnikovich@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
